добавил список участников комнаты, исправил страничку создания комнаты

--- a/Chat/templates/default.html
+++ b/Chat/templates/default.html
@@ -30,7 +30,6 @@
                     <h3>Комнаты</h3>
                     <script type="module">
                         import {roomId} from "{% static './scripts/script.js' %}";
-
                         window.roomId = roomId
                     </script>
                     <ul class="rooms">
@@ -55,7 +54,7 @@
 
                 </div>
                 <div class="RightColumn">
-                    <h3>Пользователи</h3>
+                    <h3>Участники</h3>
                     <script type="module">
                         import {userId} from "{% static './scripts/script.js' %}";
 
