--- a/Chat/templates/messenger/create_room.html
+++ b/Chat/templates/messenger/create_room.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <div class="column">
             <label>Название комнаты
-            <input class="selector" type="text" name="name">
+            <input class="sel" type="text" name="name">
             </label>
         </div>
         <div class="column">
