--- a/src/template.pug
+++ b/src/template.pug
@@ -4,14 +4,18 @@ html(lang='ru')
     meta(charset='UTF-8')
     title Чат
   body
-    .wrapper
       header.header
-        nav
-          ul.topmenu
-            li
-              a(href='/') Домой
-            li
-              a(href='/accounts/logout') Выход
+        .header-panel
+          .header-panel__logo
+            img.header-panel__logo-img(src=require("./img/photo.jpg") alt="Photo")
+          nav.header-panel__topmenu
+            ul
+              li.topmenu__home
+                a(href='/') Домой
+              li#topmenu__user.topmenu__user
+                a(href="/accounts/{{ user.id }}") {{ user }}
+              li.topmenu__sign
+                a(href='/accounts/logout') Выход
       main.main
         .MainWrapper
           nav.leftColumn
