--- a/src/template.pug
+++ b/src/template.pug
@@ -17,27 +17,28 @@ html(lang='ru')
               li.topmenu__sign
                 a(href='/accounts/logout') Выход
       main.main
-        .MainWrapper
-          nav.leftColumn
+        .mainWrapper
+          nav.column.column_left
             h3 Комнаты
             ul.rooms
-            #select-1.itc-select
-              // Кнопка для открытия выпадающего списка
-              button#add-user.itc-select__toggle(type='button' name='member' value='' data-select='toggle' data-index='-1')
-                | Добавить участника
-              // Выпадающий список
-              .itc-select__dropdown
-                ul.itc-select__options
-            a.room-button(href='/create') Создать комнату
-          .MiddleColumn
+            .selector
+              #select-1.itc-select
+                // Кнопка для открытия выпадающего списка
+                button#add-user.itc-select__toggle(type='button' name='member' value='' data-select='toggle' data-index='-1')
+                  | Добавить участника
+                // Выпадающий список
+                .itc-select__dropdown
+                  ul.itc-select__options
+            a.column__create-room-link(href='/create') Создать комнату
+          nav.column.column_middle
             h3 Сообщения
             ul.messages
-            form#message-form(action='')
-              label(for='message')
-                input#message.itc-select__toggle(type='text' name='text')
-              label(for='send-message')
-                button#send-message.selector Отправить
-          .RightColumn
+            form#message-form(action='').message-form
+              label.message-form__label-message(for='message')
+                input#message.itc-select__toggle.message-form__input(type='text' name='text')
+              label.message-form__label-send(for='send-message')
+                button#send-message.selector.message-form__send-button Отправить
+          nav.column.column_right
             h3 Участники
             ul.users
               li
