--- a/src/template.pug
+++ b/src/template.pug
@@ -21,14 +21,6 @@ html(lang='ru')
           nav.column.column_left
             h3 Комнаты
             ul.rooms
-            .selector
-              #select-1.itc-select
-                // Кнопка для открытия выпадающего списка
-                button#add-user.itc-select__toggle(type='button' name='member' value='' data-select='toggle' data-index='-1')
-                  | Добавить участника
-                // Выпадающий список
-                .itc-select__dropdown
-                  ul.itc-select__options
             a.column__create-room-link(href='/create') Создать комнату
           nav.column.column_middle
             h3 Сообщения
@@ -37,9 +29,18 @@ html(lang='ru')
               label.message-form__label-message(for='message')
                 input#message.itc-select__toggle.message-form__input(type='text' name='text')
               label.message-form__label-send(for='send-message')
-                button#send-message.selector.message-form__send-button Отправить
+                button#send-message.message-form__send-button Отправить
           nav.column.column_right
             h3 Участники
             ul.users
               li
+            .selector
+              container.selector__container
+                #select-1.itc-select
+                  // Кнопка для открытия выпадающего списка
+                  button#add-user.itc-select__toggle(type='button' name='member' value='' data-select='toggle' data-index='-1')
+                    | Добавить
+                  // Выпадающий список
+                  .itc-select__dropdown
+                    ul.itc-select__options
       footer.footer
