--- a/src/main/mainWrapper/column/users/__user/users__user.scss
+++ b/src/main/mainWrapper/column/users/__user/users__user.scss
@@ -1,6 +1,7 @@
 .users__user {
   min-width: 20vw;
-  background-color: rgb(103, 150, 190);
+  padding: 2px 0;
+
   flex-wrap: wrap;
   justify-content: space-around;
 }
