--- a/src/header/header-panel/__topmenu/header-panel__topmenu.scss
+++ b/src/header/header-panel/__topmenu/header-panel__topmenu.scss
@@ -8,6 +8,7 @@
   ul {
     min-width: 50vw;
     display: flex;
+    justify-content: flex-end;
     li {
       font-size: 1.3rem;
       padding: 1rem;
